--- a/config/mailer.yml
+++ b/config/mailer.yml
@@ -1,6 +1,6 @@
   ---
     :address: smtp.gmail.com
     :port: 587
-    :user_name: jlind@quest-for-life.org
-    :password: 9332U6
+    :user_name: <%= $private_settings.mail_user %>
+    :password: <%= $private_settings.mail_password %>
     :authentication: :plain
