--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 config/database.yml
-config/*_settings.yml
+config/production_settings.yml
+config/development_settings.yml
 db/*.sqlite3
 db/schema.rb
 log/*.log
