--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ config/production_settings.yml
 config/development_settings.yml
 db/*.sqlite3
 db/schema.rb
+db/development_structure.sql
 log/*.log
 doc/api
 doc/app
